--- a/instalasi-wordpress-ansible/templates/wp-config.php.j2
+++ b/instalasi-wordpress-ansible/templates/wp-config.php.j2
@@ -6,7 +6,7 @@ define('DB_HOST', 'localhost');
 define('DB_CHARSET', 'utf8');
 define('DB_COLLATE', '');
 
-{{ lookup('url', 'https://api.wordpress.org/secret-key/1.1/salt/') }}
+{{ wp_salt_keys.content }}
 
 $table_prefix = 'wp_';
 
